--- a/info1.html
+++ b/info1.html
@@ -1,156 +1,138 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Rosmarito</title>
+<title>EVF Studentu Pašpārvalde</title>
+<link rel="shortcut icon" type="image/x-icon" href="images/tabimage.png" />
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/bjqs.css" rel="stylesheet" type="text/css"  media="all" />
-<link href="css/demo.css" rel="stylesheet" type="text/css"  media="all" />
-<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Aguafina+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Stalemate|Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300' rel='stylesheet' type='text/css'>
- 
-		<script type="text/javascript">
-		  $(window).load(function() {
-				$('.flexslider').flexslider({
-				  animation: "slide"
-				});
-				
-				$('.main-menu').prepend('<div id="menu-icon">Menu</div>');
-				/* toggle nav */
-				$("#menu-icon").on("click", function(){
-					$(".sf-menu").slideToggle();
-					$(this).toggleClass("active");
-				});	
-			 });
-	 </script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="js/bjqs-1.3.min.js"></script>
-<script src="js/libs/jquery.secret-source.min.js"></script>
-
-    <script type="text/javascript">
-    jQuery(function($) {
-
-        $('.secret-source').secretSource({
-            includeTag: false
-        });
-
-    });
-    </script>
-    <script class="secret-source">
-        jQuery(document).ready(function($) {
-
-          $('#banner-fade').bjqs({
-            height      : 430,
-            width       :1000,
-            responsive  : true
-          });
-
-        });
-    </script>
+<meta name="keywords" content="Lobex Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+<script src="js/jquery.min.js"></script>
 </head>
-	<body>
-		<div class="wrap">
-			<div class="header">
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" title="logo"/></a>
+<body>
+<!-- banner -->
+	<div class="banner-bottom">
+		<div class="container">
+				<div class="head-nav">
+					<span class="menu"> </span>
+						<ul class="cl-effect-15">
+							<li><a href="index.html">SĀKUMS</a></li>
+							<li><a href="about.html" data-hover="PAR MUMS">PAR MUMS</a></li>
+							<li><a href="404.html" data-hover="........">........</a></li>
+							<li><a href="portfolio.html" data-hover="GALERIJA">GALERIJA</a></li>
+							<li    class="active"><a href="contact.html" data-hover="KONTAKTI">KONTAKTI</a></li>
+								<div class="clearfix"> </div>
+						</ul>
 				</div>
-			</div>
-			<div class="top-menu">
-				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			<div class="clear">
-				
-			</div>
-			<div class="img-slider">
-			<div id="container">
- 	 <!--  Outer wrapper for presentation only, this can be anything you like -->
+					<div class="clearfix"> </div>
+						<!-- script-for-nav -->
+					<script>
+						$( "span.menu" ).click(function() {
+						  $( ".head-nav ul" ).slideToggle(300, function() {
+							// Animation complete.
+						  });
+						});
+					</script>
+				<!-- script-for-nav --> 	
+		</div>
 	</div>
-		<div class="about-grids">
-			<div class="about-grid1">
-				<h3>Events</h3>
-				<img src="images/1page_img2.jpg" title="img1"/>
-				<p>Spring brings the farm to the city. We find the good, old-fashioned Australian farmers; we visit the farm, we meet the people and we hear their stories. We know that the farmers take pride in their work and we know that the produce and the animals are treated well. We bring the produce home and we make food to share, food to enjoy and food to go. It’s food to live for from farms that we know and trust. It is because we care that we proudly tell the story of real, great, Australian food.</p>
+	<!-- banner -->
+	<!-- contact -->
+	<div class="container">
+	<div class="contact-content">
+		     <div class="contact-info">
+			 <h2>Contact</h2>
+			 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Contrary to popular belief.</p>
+		     </div>
+			 <div class="contact-details">				 
+			 <form>
+				 <input type="text" placeholder="Name" required/>
+				 <input type="text" placeholder="Email" required/>
+				 <input type="text" placeholder="Phone" required/>
+				 <input type="text" placeholder="City Name" required/>
+				 <textarea placeholder="Message"></textarea>
+				 <input type="submit" value="SEND"/>
+			 </form>
+		  </div>
+		  <div class="contact-details">
+			  <div class="col-md-6 contact-map">
+				 <h4>FIND US HERE</h4>
+				 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d803187.8113675824!2d-120.11910914056458!3d38.15292455846902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb9fe5f285e3d%3A0x8b5109a227086f55!2sCalifornia%2C+USA!5e0!3m2!1sen!2sin!4v1423829283333" frameborder="0" style="border:0"></iframe>
+			  </div>
+			  <div class="col-md-6 company_address">		 
+					<h4>GET IN TOUCH</h4>
+					<p>500 Lorem Ipsum Dolor Sit,</p>
+					<p>22-56-2-9 Sit Amet, Lorem,</p>
+					<p>USA</p>
+					<p>Phone:(00) 222 666 444</p>
+					<p>Fax: (000) 123 456 78 0</p>
+					<p>Email: <a href="mailto:info@example.com">info@mycompany.com</a></p>
+					<p>Follow on: <a href="#">Facebook</a>, <a href="#">Twitter</a></p>
+			 </div>
+			  <div class="clearfix"></div>
+	     </div>		 
+	 </div>
+	 </div>
+
+	<!-- contact -->
+	<!-- cullam -->
+	<div class="cullam">
+		<div class="container">
+			<div class="col-md-4 cullam-top">
+				<img src="images/img1.jpg" class="img-responsive" alt="" />
+				<div class="cula">
+				<h5>Cullam varius faucib lacus </h5>
+				<h6>vitae elem entum facillis nulls sime </h6>
+				<p>Pellentesque fermentum interdum ipsum, ut gravida justo sollicitudin quis  ipsum cursus lobortis in vitae ipsum.</p>
 				</div>
-				<div class="clear"> </div>
-				<div class="about-grid1">
-				<img src="images/1page_img1.jpg" title="img1"/>
-				<p>Play is the creation of Stephen Beckta and Chef Michael Moffatt of the renowned Beckta dining & wine.
-
-Our hope is to offer you extraordinary food & wine with fun, value and the same warm hospitality that we have become known for.
-
-Our menu focuses on constantly changing small plates and large selection of wines by-the-glass.
-
-We hope to be able to introduce more Play to your dining life soon!</p>
-				</div>
-				<div class="clear"> </div>
-				<div class="about-grid1">
-				<img src="images/1page_img3.jpg" title="img1"/>
-				<p>If you think you're doing a restaurant any favors by ordering dessert, you might want to think again.
-
-Dessert can be delicious. And it can be profitable, too. But generally speaking, when diners extend their meal with slices of chocolate cake, cups of ice cream, and servings of crème brûlée, it can come at restaurants' expense.
-
-"It's hard to make money on desserts in the restaurant business today," said Tyler Cowen, an economics professor at George Mason University who has written extensively about the economics of eating out. "I don't think many [restaurants] benefit when people order them anymore."
-
-There are many problems with dessert, but it all starts with one pretty simple truth: The restaurant industry is a place of razor thin margins, and dessert tends to offer one of the thinnest.
-
-Food in general is tough to make money on. Restaurants have long relied on the mark-up they tack onto drinks, not grub, to boost profits. As food costs soar, that reality has only become more true, because there's a limit to how much people are willing to pay for different parts of their meal. For many mid-scale restaurants, that limit is $30 for entrees, no matter the ingredients, Todd Kliman noted recently in the Washingtonian. For desserts the ceiling is much lower, and much less flexible, says Cowen.
-
-"Dessert needs good ingredients to taste good, but you can't psychologically convince people to pay even $20 for dessert," Cowen said. "You can't really go cheap on it, but you really can't charge extra either."
-
-Forbes, for that very reason, noted in 2011 that dessert is often a great deal — for diners.
-
-But it's also made serving it a growing pain for many restaurants. The cost of serving a house-prepared line of desserts includes employing a pastry chef and dedicated space in the kitchen to the craft. Some restaurants, instead of using pastry chefs, have opted to serve simpler desserts made by line cooks, while others "have given up entirely" and outsourced their sweets, according to Kliman.</i></p>
-				</div>
-		</div>
-		
-		<div class="about-staff">
-			<h4>OUR STAFF</h4>
+			</div>
+			<div class="col-md-4 cullam-top">
+				<h5>Lorem ipsum dolor sit amet</h5>
+				<h6>vitae elem entum facillis nulls sime</h6>
+			<div class="col-md-6 cullam-left">
 			<ul>
-				<li><img src="images/staff1.jpg" title="staff1"/><h5>Carrie Riggs – Pastry Chef </h5>
-					<p>
-" We also strive to support other artisanal producers when purchasing wine, cheese, honey and many other ingredients."</p>
-				</li>
-				<li><img src="images/staff2.jpg" title="staff1"/><h5>Alexander Roberts - Executive Chef / Proprietor</h5>
-					<p>
-"Inspired by great artisanal foods of the world. We craft all of our stocks, sauces, breads, pastries and ice creams from scratch on a daily basis. "</p>
-				</li>
-			</ul>
-		</div>
-		
-		<div class="clear">
-			
-		</div>
-		<div class="footer">
-			<div class="footer-menu">
+						<li><a href="#"><span> </span>Aenean eu diam</a></li>
+						<li><a href="#"><span> </span>Curabitur grav</a></li>
+						<li><a href="#"><span> </span>Sed sed dolor </a></li>
+						<li><a href="#"><span> </span>Vestibulum eget</a></li>
+						<li><a href="#"><span> </span>In at nisi non</a></li>
+					</ul>
+			</div>
+			<div class="col-md-6 cullam-left">
 				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li class="submemu"><a href="about.html">About</a></li>
-					<li class="submemu"><a href="Events.html">Events</a></li>
-					<li class="submemu"><a href="Gallery.html">Gallery</a></li>
-					<li class="submemu"><a href="menu.html">Menu</a></li>
-					<li class="submemu"><a href="contact.html">Contact</a></li>
-				</ul>
+						<li><a href="#"><span> </span>Donec at metus</a></li>
+						<li><a href="#"><span> </span>Fusce quis mi</a></li>
+						<li><a href="#"><span> </span>Phasellus tem</a></li>
+						<li><a href="#"><span> </span>Nullam sit amet</a></li>
+						<li><a href="#"><span> </span>Integer et met</a></li>
+					</ul>
 			</div>
-			<div class="copyrights">
-								<p>© 2015 All rights Reserved | Design by<a>jb13042</a></p>
+			<div class="clearfix"> </div>
 			</div>
-			
+			<div class="col-md-4 cullam-top">
+				<img src="images/img2.jpg" class="img-responsive" alt="" />
+				<div class="cula">
+				<h5>Jonullam varius faucib lacus </h5>
+				<h6>vitae elem entum facillis nulls sime  </h6>
+				<p>Pellentesque fermentum interdum ipsum, ut gravida justo sollicitudin quis  ipsum cursus lobortis in vitae ipsum.</p>
+				</div>
+			</div>
+			<div class="clearfix"> </div>
 		</div>
-			
-			
+	</div>
+	<!-- cullam -->
+	
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Copyrights © 2015 EVF SP All rights reserved | Designed by <a>Janis Bukovskis</a></p>
 		</div>
-
-	</body>
+	</div>
+	<!-- footer -->
 </html>
-
+</body>
